--- a/src/client/index.html
+++ b/src/client/index.html
@@ -5,6 +5,8 @@
     <title>Boggart</title>
 </head>
 <body>
+    <div id="container"></div>
+
     <!-- JS -->
     <script src="app.js"></script>
 </body>
