--- a/src/client/index.html
+++ b/src/client/index.html
@@ -8,6 +8,6 @@
     <div id="container"></div>
 
     <!-- JS -->
-    <script src="app.js"></script>
+    <script src="/static/app.js"></script>
 </body>
 </html>
